minor sidenav alignment fixes

--- a/css/app.css
+++ b/css/app.css
@@ -4860,7 +4860,7 @@ th.hide-for-touch {
   .sub-nav dd:before {
     content: "";
     position: absolute;
-    top: 50%;
+    top: 47%;
     left: 1%;
     width: 7px;
     height: 7px;
