--- a/scss/_subnav.scss
+++ b/scss/_subnav.scss
@@ -86,7 +86,7 @@
 	@media #{$large-up} { 
 	  content: "";
 	  position: absolute;
-	  	top: 50%;
+	  	top: 47%;
 	  	left: 1%;
 		width: 7px;
 		height: 7px;
